[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "genhpf"
dynamic = ["version"]
authors = [
    { name = "Jungwoo Oh", email = "ojw0123@kaist.ac.kr"},
    { name = "Kyunghoon Hur", email = "pacesun@kaist.ac.kr"}
]
description = "GenHPF: General Healthcare Predictive Framework with Multi-task Multi-source Learning"
readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.10.0"

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "torch==2.6.0",
    "transformers==4.49.0",
    "h5pickle==0.4.2",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "polars==1.17.1",
    "pyarrow==17.0.0",
]

[tool.setuptools_scm]

[project.scripts]
genhpf-preprocess = "genhpf.scripts.preprocess.genhpf.main:main"
genhpf-preprocess-meds = "genhpf.scripts.preprocess.preprocess_meds:main"
genhpf-manifest = "genhpf.scripts.manifest:main"
genhpf-train = "genhpf.scripts.train:cli_main"
genhpf-test = "genhpf.scripts.test:cli_main"

[project.optional-dependencies]
dev = ["pre-commit", "black"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 110

[tool.black]
line_length = 110
